--- a/Säkerhet.html
+++ b/Säkerhet.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img src="img/lag.png" alt="en bild">
-    <h1>Lagr och Bestämmelser</h1>
+    <h1>Lagar och Bestämmelser</h1>
     <nav>
         <ul>
             <li><a href="index.html">Upphovsrättlagar</a></li>
